Making load and save button visible

--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
-﻿
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8">
@@ -10,10 +9,9 @@
     <script type="text/javascript" src="./main.js"></script>
 </head>
 <body>
-    <div>Right click and "Inspect Element".  Select the Console Tab to see the debugger output.</div>
-	<input type="button" id="btnLoad" value="Load" onclick="onLoadGame();" />
+    <input type="button" id="btnLoad" value="Load" onclick="onLoadGame();" />
 	<input type="button" id="btnSave" value="Save" onclick="onSaveGame();" />
-
+	<br/>
     <canvas id="gameWorld" width="800" height="800" style="border: 1px solid white; background: grey"></canvas>
 </body>
 </html>
